--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>All Countries</title>
     <style>
+        body{
+            text-align: center;
+            margin: auto;
+        }
         #country-container{
             display: grid;
             grid-template-columns: 300px 300px 300px 300px;
